--- a/11.0/Core_and_URP_11.0/_oth_/零碎信息记录.md
+++ b/11.0/Core_and_URP_11.0/_oth_/零碎信息记录.md
@@ -25,4 +25,26 @@ UniversalRenderPipeline__RR_2 中
 
 
 
+# ---------------------------------- #
+#  screen space shadow
+
+"UniversalRenderPipeline.InitializeShadowData()" 的官方注释中明确表示,
+urp 不再使用 screen space shadow;
+
+同时在 "ShadowData" struct 的注释中也明确表示:
+    this feature was replaced by new 'ScreenSpaceShadows' renderer feature"
+
+
+# ---------------------------------- #
+#   "offscreen"
+有点迷, 先收集有限的信息:
+
+# -1- "ForwardRenderer.Setup()" 中:
+    此处的意思为:
+        如果 camera 指定了 render target, 而不是直接渲染进 screen, 就叫做 "offscreen"
+
+
+
+
+
 
