--- a/11.0/Core_and_URP_11.0/_oth_/零碎信息记录.md
+++ b/11.0/Core_and_URP_11.0/_oth_/零碎信息记录.md
@@ -11,6 +11,11 @@
 #   RenderPipeline  实例是谁
 访问: "UniversalRenderPipeline" class, 全局唯一的 "RenderPipeline" 派生类
 
+# ---------------------------------- #
+#   RenderPipelineAsset 窗口的编辑界面由谁控制:
+
+class UniversalRenderPipelineAssetEditor;
+
 
 # ---------------------------------- #
 #   material inspector 窗口由谁来布局 ?
@@ -45,6 +50,18 @@ urp 不再使用 screen space shadow;
 
 
 
+# ---------------------------------- #
+#   GetShadowTransform()
+和 catlike 中的 "ConvertToAtlasMatrix()" 存在一点出入,
+缺少了一步运算, 这一步运算, 在 urp 中, 最后是怎么补上的 ?
 
 
+
+
+# ======================================== #
+#    urp 中出现的 通用算法
+# ======================================== #
+
+# AdditionalLightsShadowCasterPass.InsertionSort();
+双指针算法
 
