--- a/11.0/Core_and_URP_11.0/_oth_/零碎信息记录.md
+++ b/11.0/Core_and_URP_11.0/_oth_/零碎信息记录.md
@@ -56,6 +56,12 @@ urp 不再使用 screen space shadow;
 缺少了一步运算, 这一步运算, 在 urp 中, 最后是怎么补上的 ?
 
 
+# ---------------------------------- #
+#     "depth surface"
+一般指 color render texture 的 depth 部分; 
+
+
+
 
 
 # ======================================== #
@@ -64,4 +70,65 @@ urp 不再使用 screen space shadow;
 
 # AdditionalLightsShadowCasterPass.InsertionSort();
 双指针算法
+
+
+
+
+# ======================================== #
+#  迷一样的 "BuiltinRenderTextureType.CameraTarget"
+# ======================================== #
+信息很零散:
+
+# --- 如果 一个 depth Attachment 表明自己绑定的是 "BuiltinRenderTextureType.CameraTarget",
+往往说明, depth 会被存储在 color rt 的 "depth surface" 区域中;
+
+
+
+# ======================================== #
+#  "_CameraDepthAttachment" 和 "_CameraDepthTexture"
+# ======================================== #
+
+    如果一个 render pass 不定义自己的 render target, 那就要沿用 forwardRenderer 的,
+    在有些情况下, forwardRenderer 会将 depth target 设置为 "_CameraDepthAttachment",
+    比如在 常规 不透明物体 的渲染中;
+    它们的 depth 都将被写入 这个 rt 中;
+    ---
+    这样一切就都说得通了;
+
+
+
+# "_CameraDepthAttachment":
+这是一个 render texture;
+
+
+
+# "_CameraDepthTexture":
+这是一个 shader Global Texture
+
+    大部分 pass 都使用的数据
+
+    
+
+# DepthOnlyPass:
+    在 "BeforeRenderingPrePasses" 时刻, 将 camera 视野中不透明物的 depth 信息, 写入 rt: "_CameraDepthTexture";
+
+
+# CopyDepthPass:
+    在 "AfterRenderingSkybox" 时刻, 将 "_CameraDepthAttachment" 中的 depth 数据复制到 "_CameraDepthTexture" 中去;
+
+
+
+
+
+
+# ======================================== #
+#  最复杂的函数: ScriptableRenderer.SetRenderPassAttachments()
+# ======================================== #
+
+
+
+
+
+
+
 
