--- a/11.0/Core_and_URP_11.0/_oth_/零碎信息记录.md
+++ b/11.0/Core_and_URP_11.0/_oth_/零碎信息记录.md
@@ -85,38 +85,78 @@ urp 不再使用 screen space shadow;
 
 
 # ======================================== #
-#  "_CameraDepthAttachment" 和 "_CameraDepthTexture"
+#   depth prepass 和 depth copy
+#   "_CameraDepthAttachment" 和 "_CameraDepthTexture"
+#   "_CameraDepthAttachment" 和 "_CameraOpaqueTexture"
 # ======================================== #
 
-    如果一个 render pass 不定义自己的 render target, 那就要沿用 forwardRenderer 的,
-    在有些情况下, forwardRenderer 会将 depth target 设置为 "_CameraDepthAttachment",
-    比如在 常规 不透明物体 的渲染中;
-    它们的 depth 都将被写入 这个 rt 中;
+
+# 何时使用 depth prepass: (requiresDepthPrepass)
+    && camra or asset 需要 depth texture, 但环境(平台+camera) 又不支持 depth copy 操作;
+    ||  若 camera 被用于  editor: scene 窗口, 或 预览窗口;
+    ||  存在某个 render pass, 它在 "渲染不透明物" 之前被执行, 同时它需要 depth 或 normal texture 作为 input;
+    ||  存在某个 render pass, 需要提前计算好 normal texture 当作 input;
+
+# createDepthTexture 成立条件:
+    && camra or asset 需要 depth texture, 且没有使用 depth preapss;
+    || 当前 camera 是 base, 且不属于 stack 中最后一个;
+    || 是延迟渲染
+
+# 何时使用 depth copy pass: (requiresDepthCopyPass)
+    (大致表达)
+    && camra or asset 需要 depth texture
+    && 但没有使用 depth prepass;
+
+
+# "_CameraDepthAttachment":   (depth 数据临时存放处)
+    这是一个 render texture;
+
+    如果一个 ForwardRenderer 启用了 createDepthTexture (查看上文成立条件),
+    那么 renderer 会将 "_CameraDepthAttachment" 设为默认的 depth 数据 render target;
+
+    一些主 render pass, 比如: 
+        RenderOpaqueForwardPass, 
+        DrawSkyboxPass,
+    会将自己生成的 depth 数据写入 "_CameraDepthAttachment" 中;
+    (这些 render pass 不会定义自己的 render target, 而是沿用 renderer 的配置)
     ---
-    这样一切就都说得通了;
+    然后会执行 depth copy pass, 将本 rt 的数据, 复制到 "_CameraDepthTexture" 中;
+    ---
+    最后, 本 rt 一般不会被 后续的 pass 直接访问;
 
 
+# "_CameraDepthTexture":   (最终的 depth texture)
+    这是一个 render texture:
 
-# "_CameraDepthAttachment":
-这是一个 render texture;
+    创建方式:
+    -1- depth prepass 可以一步到位生成它;
+    -2- 在渲染完 skybox 之后, 
+        depth copy pass 会把已经生成好的 depth 数据. 
+        从 "_CameraDepthAttachment" 复制进 "_CameraDepthTexture";
 
-
-
-# "_CameraDepthTexture":
-这是一个 shader Global Texture
-
-    大部分 pass 都使用的数据
-
+    之后的所有 pass, 都能使用本 rt 中的 depth 数据;
+    ---
+    如果 depth prepass 和 depth copy pass 都未执行,
+    那么 base camera 会主动创建一个 "_CameraDepthTexture", 并写上默认值: "far plane val"
+    (这个值具体是 0 还是 1, 视平台而定)
     
 
-# DepthOnlyPass:
-    在 "BeforeRenderingPrePasses" 时刻, 将 camera 视野中不透明物的 depth 信息, 写入 rt: "_CameraDepthTexture";
+
+# createColorTexture 成立条件:
+    && 存在 renderFeature, 且没有 Hololens
+    && 不是预览窗口
+    || 需要创建 "intermediate color render texture"
+    || 存在某个 render pass, 需要提前计算好 color texture 当作 input;
 
 
-# CopyDepthPass:
-    在 "AfterRenderingSkybox" 时刻, 将 "_CameraDepthAttachment" 中的 depth 数据复制到 "_CameraDepthTexture" 中去;
 
-
+# "_CameraDepthAttachment" (opaque color 数据临时存放处)
+# "_CameraOpaqueTexture"   (最终的 opaque color texture)
+    和上面那对 depth rt 关系类似;
+    ---
+    唯一的不同时, 中间态 opaque color 数据不一定会被写入 "_CameraDepthAttachment",
+    也可能写入默认的 "BuiltinRenderTextureType.CameraTarget",
+    但最终一定会被复制进 "_CameraOpaqueTexture";
 
 
 
@@ -124,7 +164,7 @@ urp 不再使用 screen space shadow;
 # ======================================== #
 #  最复杂的函数: ScriptableRenderer.SetRenderPassAttachments()
 # ======================================== #
-
+一个难点是 clear flags, 非常复杂
 
 
 
