--- a/11.0/Core_and_URP_11.0/_oth_/零碎信息记录.md
+++ b/11.0/Core_and_URP_11.0/_oth_/零碎信息记录.md
@@ -63,6 +63,22 @@ urp 不再使用 screen space shadow;
 
 
 
+# ======================================== #
+#   曲线信息 如何被传入 shader  ?
+# ======================================== #
+参考: class TextureCurve;
+
+它能将一个 curve 转换为一个 texture2d (w=128,h=1),
+将曲线图的 x轴[0,1] 区间均匀分为 128份,
+每个节点计算自己的 y轴值, 存入对用的 texel.r 通道;
+
+到了 shader 中对这个 texture 做插值即可;
+
+
+
+
+
+
 
 # ======================================== #
 #    urp 中出现的 通用算法
