--- a/11.0/Core_and_URP_11.0/_tpr_/零碎信息记录.md
+++ b/11.0/Core_and_URP_11.0/_tpr_/零碎信息记录.md
@@ -1,5 +1,5 @@
 # ================================================================ #
-#                      零碎信息记录
+#                      零碎信息记录    URP 11.0
 # ================================================================ #
 
 
@@ -181,6 +181,106 @@ urp 不再使用 screen space shadow;
 #  最复杂的函数: ScriptableRenderer.SetRenderPassAttachments()
 # ======================================== #
 一个难点是 clear flags, 非常复杂
+
+
+
+
+# ======================================== #
+#      render passes 执行时刻
+# ======================================== #
+
+# BeforeRendering = 0,
+
+# BeforeRenderingShadows = 50,
+                                        m_MainLightShadowCasterPass
+                                        m_AdditionalLightsShadowCasterPass
+
+# AfterRenderingShadows = 100,
+
+------------------------------------------------------------------------------------
+
+# BeforeRenderingPrePasses = 150,
+                                        m_DepthPrepass          
+                                        m_DepthNormalPrepass
+                                        colorGradingLutPass
+                                            内部含有后处理:
+                                                ChannelMixer
+                                                ColorAdjustments
+                                                ColorCurves
+                                                LiftGammaGain
+                                                ShadowsMidtonesHighlights
+                                                SplitToning
+                                                Tonemapping   ?
+                                                WhiteBalance
+
+# AfterRenderingPrePasses = 200,
+
+# BeforeRenderingOpaques = 250,
+                                        m_RenderOpaqueForwardPass
+
+# AfterRenderingOpaques = 300,
+
+------------------------------------------------------------------------------------
+
+# BeforeRenderingSkybox = 350,
+                                        m_DrawSkyboxPass
+
+# AfterRenderingSkybox = 400,
+                                        m_CopyDepthPass
+                                        m_CopyColorPass
+
+# BeforeRenderingTransparents = 450,
+                                        m_TransparentSettingsPass
+                                        m_RenderTransparentForwardPass
+
+# AfterRenderingTransparents = 500,
+
+# BeforeRenderingPostProcessing = 550,
+                                        m_OnRenderObjectCallbackPass
+                                        postProcessPass
+
+                                            内部含有后处理:
+                                                SMAA
+                                                DepthOfField
+                                                MotionBlur
+                                                PaniniProjection
+                                                Bloom
+                                                LensDistortion
+                                                ChromaticAberration
+                                                Vignette
+                                                ColorLookup
+                                                ColorAdjustments ?
+                                                Tonemapping      ?
+                                                FilmGrain        ?
+
+
+
+# AfterRenderingPostProcessing = 600,
+
+------------------------------------------------------------------------------------
+
+# AfterRendering = 1000,
+                                        m_CapturePass (忽略此功能)
+
+                                        +1:
+                                            finalPostProcessPass
+                                                内部含有 AA: FXAA
+
+                                            m_FinalBlitPass
+
+                                                触发条件:
+                                                    stack 中全体 camera 的 "后处理" 都关掉
+
+
+
+
+
+
+
+
+
+
+
 
 
 
